--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ main {
   width: 50vw;
   box-shadow: 0.1px 0.1px 14px 14px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
+  max-height: 80vh;
 }
 
 main section {
