--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,10 @@ input:focus {
   content: url("./images/001-menu.png");
 }
 
+#selected {
+  content: url("./images/002-bin.png");
+}
+
 .ptr:hover,
 label:hover,
 .lists input:hover {
@@ -98,4 +102,9 @@ i {
 
 i:hover {
   opacity: 1;
+}
+
+.active,
+.active * {
+  background-color: #ebeab4;
 }
