--- a/src/style.css
+++ b/src/style.css
@@ -61,10 +61,6 @@ input {
 
 .add-list input::placeholder {
   opacity: 0.1;
-}
-
-.add-list input::placeholder,
-.clear {
   color: #b0b0b0;
 }
 
@@ -92,6 +88,7 @@ input:focus {
 
 #selected {
   content: url("./images/002-bin.png");
+  height: auto;
 }
 
 .ptr:hover,
@@ -117,6 +114,12 @@ i:hover {
   text-decoration: line-through;
 }
 
-.bgr {
-  background-color: red;
+.clear-all p {
+  opacity: 0.4;
+}
+
+.clear-all p:hover {
+  text-decoration: underline;
+  color: #000;
+  opacity: 1;
 }
