--- a/src/style.css
+++ b/src/style.css
@@ -88,7 +88,7 @@ input:focus {
 
 #selected {
   content: url("./images/002-bin.png");
-  height: auto;
+  height: 20%;
 }
 
 .ptr:hover,
@@ -106,6 +106,7 @@ i:hover {
 
 .active,
 .active * {
+  width: auto;
   background-color: #ebeab4;
 }
 
